--- a/css/styles.css
+++ b/css/styles.css
@@ -23,21 +23,24 @@ header {
 }
 
 .heading {
-  background-color: #777;
+  background-color: rgba(0, 0, 0, 0.2);
   padding: 30px;
   width: 600px;
 }
+.heading h1 {
+  color: #db9334;
+  margin: 10px auto;
+}
 #registration {
   background-color: #fff;
-  width: 100%;
-  max-width: 100rem;
+
+  max-width: 600rem;
   display: flex;
   align-items: center;
   justify-content: center;
   margin: 20px auto;
 }
 .container {
-  background-color: #fff;
   border-radius: 5px;
   box-shadow: 0 2px 10px #313030d8;
   width: 600px;
@@ -46,6 +49,7 @@ header {
 h2 {
   text-align: center;
   margin: 0 0 20px;
+  color: #db9334;
 }
 
 .form {
