--- a/css/styles.css
+++ b/css/styles.css
@@ -54,6 +54,7 @@ h2 {
 
 .form {
   padding: 30px 40px;
+  background-color: rgb(233, 218, 218);
 }
 
 .form-control {
@@ -104,7 +105,7 @@ h2 {
 
 .form button {
   cursor: pointer;
-  background-color: #db9334;
+  background-color: #54086b;
   border: 2px solid #8bbada;
   border-radius: 4px;
   color: #fff;
